==> RAKWireless/RAK-nRF52-RUI/cores/nRF5/component/core/mcu/nrf52840/uhal/uhal_uart.c <==
#include <stdarg.h>
#include "uhal_uart.h"

static void uart_init(SERIAL_PORT port, uint32_t baudrate, SERIAL_WIRE_MODE_E WireMode)
{
    ret_code_t ret;

    if (port == SERIAL_UART0) {
        m_uart0_drv_config.baudrate = get_nrf_uart_baudrate(baudrate);

        uart_wire_mode[SERIAL_UART0] = WireMode;
        switch (WireMode) {
            case SERIAL_ONE_WIRE_TX_PIN_MODE:
            {
                m_uart0_drv_config.pselrxd = UART0_TXD_PIN;
                m_uart0_drv_config.pseltxd = NRF_UART_PSEL_DISCONNECTED;

                single_wire_mode[port] = SINGLE_WIRE_MODE_RX;
                break;
            }
            case SERIAL_ONE_WIRE_RX_PIN_MODE:
            {
                m_uart0_drv_config.pselrxd = UART0_RXD_PIN;
                m_uart0_drv_config.pseltxd = NRF_UART_PSEL_DISCONNECTED;

                single_wire_mode[port] = SINGLE_WIRE_MODE_RX;
                break;
            }
            case SERIAL_TWO_WIRE_NORMAL_MODE:
            default:
            {
                m_uart0_drv_config.pselrxd = UART0_RXD_PIN;
                m_uart0_drv_config.pseltxd = UART0_TXD_PIN;
                break;
            }
        }

        ret = nrf_serial_init(&serial_uart0, &m_uart0_drv_config, &serial0_config);
        //APP_ERROR_CHECK(ret);

    } else if (port == SERIAL_UART1) {
        m_uart1_drv_config.baudrate = get_nrf_uart_baudrate(baudrate);

        uart_wire_mode[SERIAL_UART1] = WireMode;
        switch (WireMode) {
            case SERIAL_ONE_WIRE_TX_PIN_MODE:
            {
                m_uart1_drv_config.pselrxd = UART1_TXD_PIN;
                m_uart1_drv_config.pseltxd = NRF_UART_PSEL_DISCONNECTED;

                single_wire_mode[port] = SINGLE_WIRE_MODE_RX;
                break;
            }
            case SERIAL_ONE_WIRE_RX_PIN_MODE:
            {
                m_uart1_drv_config.pselrxd = UART1_RXD_PIN;
                m_uart1_drv_config.pseltxd = NRF_UART_PSEL_DISCONNECTED;

                single_wire_mode[port] = SINGLE_WIRE_MODE_RX;
                break;
            }
            case SERIAL_TWO_WIRE_NORMAL_MODE:
            default:
            {
                m_uart1_drv_config.pselrxd = UART1_RXD_PIN;
                m_uart1_drv_config.pseltxd = UART1_TXD_PIN;
                break;
            }
        }

        ret = nrf_serial_init(&serial_uart1, &m_uart1_drv_config, &serial1_config);
        //APP_ERROR_CHECK(ret);

    }
}

static void uart_deinit(SERIAL_PORT port)
{
    ret_code_t ret;

    if (port == SERIAL_UART0) {
        ret = nrf_serial_uninit(&serial_uart0);
        if ((ret != NRF_SUCCESS) &&
            (ret != NRF_ERROR_MODULE_NOT_INITIALIZED) &&
            (ret != NRF_ERROR_BUSY))
        {
            APP_ERROR_CHECK(ret);
        }
    } else if (port == SERIAL_UART1) {
        ret = nrf_serial_uninit(&serial_uart1);
        if ((ret != NRF_SUCCESS) &&
            (ret != NRF_ERROR_MODULE_NOT_INITIALIZED) &&
            (ret != NRF_ERROR_BUSY))
        {
            APP_ERROR_CHECK(ret);
        }
    }

    //uart_status[port].active = false;
}

int32_t uhal_uart_write (SERIAL_PORT Port, uint8_t const *Buffer, int32_t NumberOfBytes, uint32_t Timeout)
{
    size_t Count = 0;
    uint32_t err_code = NRF_ERROR_INTERNAL;

    if (Buffer == NULL) {
        return -UDRV_WRONG_ARG;
    }

    if (uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE) {
        if (single_wire_mode[Port] != SINGLE_WIRE_MODE_TX) {
            uhal_single_wire_tx_mode(Port);
        }
    }

    if (Port == SERIAL_UART0) {
        err_code = nrf_serial_write(&serial_uart0, Buffer, NumberOfBytes, &Count, Timeout);
        if (uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE) {
            nrf_serial_flush(&serial_uart0, Timeout);
        }
    } else if (Port == SERIAL_UART1) {
        err_code = nrf_serial_write(&serial_uart1, Buffer, NumberOfBytes, &Count, Timeout);
        if (uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE) {
            nrf_serial_flush(&serial_uart1, Timeout);
        }
    }

    if (uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE) {
        if (single_wire_mode[Port] != SINGLE_WIRE_MODE_RX) {
            uhal_single_wire_rx_mode(Port);
        }
    }

    switch (err_code) {
        case NRF_SUCCESS:
            return Count;
        case NRF_ERROR_BUSY:
            return -UDRV_BUSY;
        case NRF_ERROR_INVALID_STATE:
        default:
            return -UDRV_INTERNAL_ERR;
    }
}

int32_t uhal_uart_read (SERIAL_PORT Port, uint8_t *Buffer, int32_t NumberOfBytes, uint32_t Timeout)
{
    size_t Count = 0;

    if (Buffer == NULL) {
        return -UDRV_WRONG_ARG;
    }

    if (Port == SERIAL_UART0) {
        nrf_serial_read(&serial_uart0, Buffer, NumberOfBytes, &Count, Timeout);
    } else if (Port == SERIAL_UART1) {
        if (uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE) {
            if (single_wire_mode[Port] != SINGLE_WIRE_MODE_RX) {
                uhal_single_wire_rx_mode(Port);
            }
        }
        nrf_serial_read(&serial_uart1, Buffer, NumberOfBytes, &Count, Timeout);
    }

    return Count;
}

int32_t uhal_uart_peek (SERIAL_PORT Port)
{
    uint8_t ch;

    if (Port == SERIAL_UART0) {
        if(queue_peek(serial_uart0.p_ctx->p_config->p_queues->p_rxq,&ch) == NRF_SUCCESS) {
            return (int32_t)ch;
        }
    } else if (Port == SERIAL_UART1) {
        if(queue_peek(serial_uart1.p_ctx->p_config->p_queues->p_rxq,&ch ) == NRF_SUCCESS) {
            return (int32_t)ch;
        }
    }
    return -UDRV_INTERNAL_ERR;
}

void uhal_uart_flush (SERIAL_PORT Port, uint32_t Timeout)
{
    if (Port == SERIAL_UART0) {
        nrf_serial_flush(&serial_uart0, Timeout);
        //queue_flush(serial_uart0.p_ctx->p_config->p_queues->p_rxq);
    } else if (Port == SERIAL_UART1) {
        nrf_serial_flush(&serial_uart1, Timeout);
        //queue_flush(serial_uart1.p_ctx->p_config->p_queues->p_rxq);
    }
}

int32_t uhal_uart_read_available(SERIAL_PORT Port) {
    if (Port == SERIAL_UART0) {
        return queue_length(serial_uart0.p_ctx->p_config->p_queues->p_rxq);
    } else if (Port == SERIAL_UART1) {
        return queue_length(serial_uart1.p_ctx->p_config->p_queues->p_rxq);
    }
    return -UDRV_INTERNAL_ERR;
}
