==> RAKWireless/RAK-STM32-RUI/cores/STM32WLE/component/core/mcu/stm32wle5xx/uhal/uhal_uart.c <==
#include <stdarg.h>
#include "uhal_uart.h"
#define BUFFER_SIZE 128

static void uart_init(SERIAL_PORT port, uint32_t baudrate, SERIAL_WORD_LEN_E datalen,SERIAL_STOP_BIT_E stop,
SERIAL_PARITY_E parity, SERIAL_WIRE_MODE_E WireMode)
{
    //service_debug("baudrate %d datalen %d stop %d parity %d\r\n",
    //baudrate,datalen,stop,parity);

    UART_InitTypeDef uart;

    switch (stop)
    {            
        case SERIAL_STOP_BIT_1 : uart.StopBits = UART_STOPBITS_1 ; break;          
        case SERIAL_STOP_BIT_2 : uart.StopBits = UART_STOPBITS_2 ; break;  
        default : uart.StopBits = UART_STOPBITS_1 ; break ;
    }

    switch (parity)
    {            
        case SERIAL_PARITY_DISABLE : uart.Parity = UART_PARITY_NONE ; break;          
        case SERIAL_PARITY_ODD :  uart.Parity = UART_PARITY_ODD ; break;          
        case SERIAL_PARITY_EVEN : uart.Parity = UART_PARITY_EVEN ; break;          
        default : uart.Parity = UART_PARITY_NONE ; break ;
    }

    //If there is parity check, the data length is processed
    if(parity)
    {
        switch (datalen)
        {            
            // Note : N bit + 1 parity = WordLength
            case SERIAL_WORD_LEN_6 : uart.WordLength = UART_WORDLENGTH_7B ; break;         
            case SERIAL_WORD_LEN_7 : uart.WordLength = UART_WORDLENGTH_8B ; break;          
            case SERIAL_WORD_LEN_8 : uart.WordLength = UART_WORDLENGTH_9B ; break;  
            default : uart.WordLength = UART_WORDLENGTH_8B ; break ;
        }
    }
    else
    {
        switch (datalen)
        {            
            case SERIAL_WORD_LEN_7 : uart.WordLength = UART_WORDLENGTH_7B ; break;          
            case SERIAL_WORD_LEN_8 : uart.WordLength = UART_WORDLENGTH_8B ; break;  
            default : uart.WordLength = UART_WORDLENGTH_8B ; break ;
        }
    }

    if (port == SERIAL_UART1) 
    {
        uhal_uart_dma_uart1_init();

        uart_wire_mode[SERIAL_UART1] = WireMode;

        huart1.Instance = USART1;
        huart1.Init.BaudRate = baudrate;
        huart1.Init.WordLength = uart.WordLength;
        huart1.Init.StopBits = uart.StopBits;
        huart1.Init.Parity = uart.Parity;
        huart1.Init.Mode = UART_MODE_TX_RX;
        huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
        huart1.Init.OverSampling = UART_OVERSAMPLING_16;
        huart1.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
        huart1.Init.ClockPrescaler = UART_PRESCALER_DIV1;
        if(WireMode != SERIAL_TWO_WIRE_NORMAL_MODE)
        {
            huart1.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_SWAP_INIT;
            huart1.AdvancedInit.Swap = UART_ADVFEATURE_SWAP_ENABLE;
            if (HAL_HalfDuplex_Init(&huart1) != HAL_OK)
                Error_Handler();
        }
        else{
            huart1.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
            if (HAL_UART_Init(&huart1) != HAL_OK)
                Error_Handler();
        }
        if (HAL_UARTEx_SetTxFifoThreshold(&huart1, UART_TXFIFO_THRESHOLD_1_8) != HAL_OK)
        {
            Error_Handler();
        }
        if (HAL_UARTEx_SetRxFifoThreshold(&huart1, UART_RXFIFO_THRESHOLD_1_8) != HAL_OK)
        {
            Error_Handler();
        }
        if (HAL_UARTEx_DisableFifoMode(&huart1) != HAL_OK)
        {
            Error_Handler();
        }
        StartReception(port);
        UART_WakeUpTypeDef WakeUpSelection;
        WakeUpSelection.WakeUpEvent   = UART_WAKEUP_ON_READDATA_NONEMPTY;
        if (HAL_UARTEx_StopModeWakeUpSourceConfig(&huart1, WakeUpSelection) != HAL_OK)
        {
            Error_Handler();
        }

	    __HAL_RCC_WAKEUPSTOP_CLK_CONFIG(RCC_STOP_WAKEUPCLOCK_HSI);

    } 
    else if (port == SERIAL_UART2) {
        
        uart_wire_mode[SERIAL_UART2] = WireMode;

        uhal_uart_dma_lpuart_init();

        hlpuart1.Instance = LPUART1;
        hlpuart1.Init.BaudRate = baudrate;
        hlpuart1.Init.WordLength = uart.WordLength;
        hlpuart1.Init.StopBits = uart.StopBits;
        hlpuart1.Init.Parity = uart.Parity;
        hlpuart1.Init.Mode = UART_MODE_TX_RX;
        hlpuart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
        hlpuart1.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
        hlpuart1.Init.ClockPrescaler = UART_PRESCALER_DIV1;
        hlpuart1.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
        hlpuart1.FifoMode = UART_FIFOMODE_DISABLE;
        if (HAL_UART_Init(&hlpuart1) != HAL_OK)
        {
            Error_Handler();
        }
        if (HAL_UARTEx_SetTxFifoThreshold(&hlpuart1, UART_TXFIFO_THRESHOLD_1_8) != HAL_OK)
        {
            Error_Handler();
        }
        if (HAL_UARTEx_SetRxFifoThreshold(&hlpuart1, UART_RXFIFO_THRESHOLD_1_8) != HAL_OK)
        {
            Error_Handler();
        }
        if (HAL_UARTEx_DisableFifoMode(&hlpuart1) != HAL_OK)
        {
            Error_Handler();
        }
        
        StartReception(port);

        UART_WakeUpTypeDef WakeUpSelection;
        WakeUpSelection.WakeUpEvent   = UART_WAKEUP_ON_READDATA_NONEMPTY;
        if (HAL_UARTEx_StopModeWakeUpSourceConfig(&hlpuart1, WakeUpSelection) != HAL_OK)
        {
            Error_Handler();
        }
	 
	    EXTI->IMR1 |= EXTI_IMR1_IM28;
        __HAL_UART_ENABLE_IT(&hlpuart1, UART_IT_WUF);
        //HAL_UARTEx_EnableStopMode(&hlpuart1);
	    __HAL_RCC_WAKEUPSTOP_CLK_CONFIG(RCC_STOP_WAKEUPCLOCK_HSI);
    }
}

static void uart_deinit(SERIAL_PORT port)
{
    if (port == SERIAL_UART2) {
        if (HAL_UART_DeInit(&hlpuart1) != HAL_OK)
        {
            Error_Handler();
        }
    } else if (port == SERIAL_UART1) {
        if (HAL_UART_DeInit(&huart1) != HAL_OK)
        {
            Error_Handler();
        }
    }
}

int32_t uhal_uart_write(SERIAL_PORT Port, uint8_t const *Buffer, int32_t NumberOfBytes, uint32_t Timeout)
{
    uint32_t err_code = HAL_OK;
    if (Port == SERIAL_UART1) {
        
        if(uart_wire_mode[Port] == SERIAL_ONE_WIRE_TX_PIN_MODE || uart_wire_mode[Port] == SERIAL_ONE_WIRE_RX_PIN_MODE)
        {
            HAL_HalfDuplex_EnableTransmitter(&huart1);
            err_code = HAL_UART_Transmit(&huart1, Buffer, NumberOfBytes, Timeout);
            HAL_HalfDuplex_EnableReceiver(&huart1);
        }
        else
            err_code = HAL_UART_Transmit(&huart1, Buffer, NumberOfBytes, Timeout);
    } else if (Port == SERIAL_UART2)
    {
        err_code = HAL_UART_Transmit(&hlpuart1, Buffer , NumberOfBytes,Timeout);
    }  
    switch (err_code)
    {
    case HAL_OK:
        return UDRV_RETURN_OK;
    case HAL_BUSY:
        return -UDRV_BUSY;
    case HAL_ERROR:
    default:
        return -UDRV_INTERNAL_ERR;
    }
}

int32_t uhal_uart_read(SERIAL_PORT Port, uint8_t *Buffer, int32_t NumberOfBytes, uint32_t Timeout)
{
    if (Port == SERIAL_UART1) {
        return (int32_t)fund_circular_queue_out(&SERIAL_UART1_rxq, Buffer, NumberOfBytes);
    } else if (Port == SERIAL_UART2) {
        return (int32_t)fund_circular_queue_out(&SERIAL_UART2_rxq, Buffer, NumberOfBytes);
    }
    return -UDRV_INTERNAL_ERR;
}

int32_t uhal_uart_peek(SERIAL_PORT Port)
{
    uint8_t ch;

    if (Port == SERIAL_UART1) {
        return (int32_t)fund_circular_queue_peek(&SERIAL_UART1_rxq, &ch);
    } else if (Port == SERIAL_UART2) {
        return (int32_t)fund_circular_queue_peek(&SERIAL_UART2_rxq, &ch);
    }
    return -UDRV_INTERNAL_ERR;
}

void uhal_uart_flush(SERIAL_PORT Port, uint32_t Timeout)
{
    if (Port == SERIAL_UART1) {
        fund_circular_queue_reset(&SERIAL_UART1_rxq);
    } else if (Port == SERIAL_UART2) {
        fund_circular_queue_reset(&SERIAL_UART2_rxq);
    }
}

int32_t uhal_uart_read_available(SERIAL_PORT Port)
{
    if (Port == SERIAL_UART1) {
        return (size_t)fund_circular_queue_utilization_get(&SERIAL_UART1_rxq);
    } else if (Port == SERIAL_UART2) {
        return (size_t)fund_circular_queue_utilization_get(&SERIAL_UART2_rxq);
    }
    return -UDRV_INTERNAL_ERR;
}
